--- a/style.css
+++ b/style.css
@@ -1,103 +1,206 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
 
-body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.cabecalho {
+.cabecalho{
+    background-color:#2D96AD;
+    color: white;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 50px 0 ;
-    background-color: #6078CF;
-    color:#FFFFFF;
-    border-radius: 50px 0px;
+    justify-content: start;
+    
 }
-
-.logo {
-    width: 100px;
+.logo-escola{
+    width: 10%;
+    margin: 0 0;
 }
-
-.item-lista {
-    display: inline-block;
-    font-size:24px;
-    margin: 0 26px;
-}
-
-.livros {
-    background-image: linear-gradient(rgba(76, 73, 224, 1),
-rgba(76, 73, 224, 0));
-    color: #FFFFFF;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 36px 0;
-}
-
-.livros-conteudo {
-    width: 45%;
-}
-
-.titulo-section {
-    width: 796px;
-    left: 128px;
-    top: 242px;
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-}
-
-.texto-section {
-    width: 923px;
-    height: 99px;
-    left: 128px;
-    top: 382px;
-    font-family: 'Noto Serif';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 33px;
-}
-.divisaum {
-    display: flex;
-    text-align: center;
-}
-
-.olarubi-imagem {
-    width: 319px;
-    height: 366px;
-    left: 1068px;
-    top: 258px
-}
-
-.titulos-acervo {
-        
-}
-
-.acervo-todos{
+.lista-item{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    padding: 6px 0 0 0;
+    margin: 20px 0 0 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
 }
-
-.acervo-div {
+.lista-item1{
+    display: grid;
+    padding: 0 0 0 0;
+    margin: 0 12px 0 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px; 
 }
-
-.clube-imagem {
-    width: 50%;
+.search-box{
+    position: absolute;
+    top: 5%;
+    left: 92%;
+    transform: translate(-95%, -8%);
+    background: #343FA5;
+    height: 35px;
+    padding: 7px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
-.fatos-imagem {
-    width: 50%;       
+.lupa-branca{
+    display: none;
+    width: 40%;
 }
-
-.scratchjr-imagem {
-    width: ;
+.lupa-azul{
+    width: 40%;
 }
-
-.rodape {
-  background-image: linear-gradient(rgba(54, 97, 182, 0), rgba(54, 97, 182, 1));
+.search-text{
+    background: none;
+    border: 0;
+    outline: 0;
+    font-size: 16px;
+    width: 0;
+    padding: 0;
+    transition: 0.4s;
+}
+.search-btn{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 70%;
+    cursor: pointer;
+}
+.search-box:hover > .search-text{
+    width: 320px;
+    padding-left: 20px;
+}
+.search-box:hover > .search-btn{
+    background: #447ce7;
+}
+.search-box:hover > .search-btn .lupa-azul{
+    display: none;
+}
+.search-box:hover > .search-btn .lupa-branca{
+    display: block;
+}
+::-webkit-input-placeholder{
+    font-size: 17px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #aeaeae;
+}
+.j1{
+    background-color: #343FA5;
+}
+.nav{
+    list-style: none;
+    display: flex;
+    padding: 0;
+    justify-content: center;
+}
+.nav a{
+    display: inline-block;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+.nav a:hover {
+background-color: #2D96AD;
+}
+.sidebar {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
+    height: 500px;
+    background-color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+}
+.sidebar a {
+    display: block;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    text-decoration: none;
+    color: #333;
+}
+.sidebar a:hover {
+    background-color: #C2F4C7;
+}
+body {
+ margin: 0;
+ padding: 0;
+ font-family: Arial, sans-serif;
+}
+.corpo{
+    float: right;
+    width: 86%;
+}
+.titulo{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+}
+.beterraba{
+    width: 30%;
+    border-radius: 5%;
+}
+.paragrafo1{
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.titulo1{
+    font-size: 22px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.paragrafo2{
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.titulo2{
+    font-size: 22px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.paragrafo3{
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.artigo-cientifico{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    align-items: center;
+}
+.button{
+    background-color: #343FA5;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+footer{
+    background-color: #EAF8F7;
+    color: #238297;
+    padding: 10px; 
+    position: absolute;
+    height: 100px;
+    top: 780px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.center-image img{
+    max-width: 60px;
+    height: auto;
+}
+.left-image img{
+    max-width: 100px;
+    height: auto;
+}
+footer ul{
+    list-style: none;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
